update for sonar